examples/test/testpolicy12213.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12213
  namespace: namespace483
spec:
  podSelector:
    matchLabels:
      key11: value31
      key43: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value49
          key42: value18
          key47: value15
      podSelector:
        matchLabels:
          key25: value28
          key8: value21
          key22: value35
